RESOLVED FIXED62605
Fix llocp and lvalp names in the lexer to something more meaningful
https://bugs.webkit.org/show_bug.cgi?id=62605
Summary Fix llocp and lvalp names in the lexer to something more meaningful
Oliver Hunt
Reported 2011-06-13 15:42:41 PDT
Fix llocp and lvalp names in the lexer to something more meaningful
Attachments
Patch (9.94 KB, patch)
2011-06-13 15:44 PDT, Oliver Hunt
barraclough: review+
Gavin Barraclough
Comment 1 2011-06-13 15:43:57 PDT
r+ even though there is no patch yet! :-D
Oliver Hunt
Comment 2 2011-06-13 15:44:27 PDT
Oliver Hunt
Comment 3 2011-06-13 15:48:23 PDT
Note You need to log in before you can comment on or make changes to this bug.