2011-06-13  Oliver Hunt  <oliver@apple.com>

Reviewed by Gavin Barraclough.

        Fix llocp and lvalp names in the lexer to something more meaningful
        https://bugs.webkit.org/show_bug.cgi?id=62605

        A simple rename

        * parser/Lexer.cpp:
        (JSC::Lexer::parseIdentifier):
        (JSC::Lexer::parseString):
        (JSC::Lexer::lex):
        * parser/Lexer.h:
        (JSC::Lexer::lexExpectIdentifier):

Canonical link: https://commits.webkit.org/78126@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88724 268f45cc-cd09-0410-ab3c-d52691b4dbfc